operators/api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: ckm
  labels:
    app: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: api
    spec:
      serviceAccountName: aws-secrets-sa
      containers:
        - name: api
          image: yourusername/api:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 500MiB
              memory: 300MiB
            limits:
              cpu: 800MiB
              memory: 500MiB
          ports:
            - containerPort: 3000
              name: http
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          volumeMounts:
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
            - name: localtime
              mountPath: /etc/localtime
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: aws-secrets
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/UTC
      restartPolicy: Always
