operators/api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: ckm
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: api
  type: ClusterIP
